--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -41,13 +41,19 @@ jobs:
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
       run: ./scripts/terraform.sh fmt
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       run: ./scripts/terraform.sh plan
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
       # On push to master, build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
       run: ./scripts/terraform.sh apply
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
