--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -53,3 +53,6 @@ jobs:
       run: ./scripts/terraform.sh apply
       env:
         SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
+
+    - name: env
+      run: env
